--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ a {
 }
 
 /* ************************* NAVBAR ************************* */
+
 nav {
     overflow: hidden; /* Pour cacher en cas de depassement */
     background-color: white;
@@ -67,7 +68,79 @@ header li a {
 
 #banner {
     padding-top: 60px;
-    background: url(assets/iconsBg2.jpg) no-repeat fixed 50% 50%; /* Pour centrer l'image et la fixer*/
+    background: url(assets/iconsBg3.png) no-repeat fixed 50% 50%; /* Pour centrer l'image et la fixer*/
     background-size: cover;
     height: 600px;
+    
 }
+
+h1 {
+    font-family: 'Fredoka One', cursive;
+    /*font-family: 'Lobster', cursive;*/
+    text-align: center;
+    color: rgb(7, 128, 209);
+    font-size: 9em;
+    margin-top: 1.2em;
+    /*-webkit-text-stroke: 6px white;*/
+    text-shadow: 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255);
+}
+
+/* ********************* INTRODUCTION ********************* */
+
+#introduction {
+    background-color: #d4ffff8c;
+    padding: 10px 0px 80px 0;
+}
+
+#textIntro {
+    padding: 0px 20%;
+    color: rgb(7, 128, 209);
+}
+
+p {
+    padding: 0 0 2em 0;
+}
+
+#imgDemo {
+    width: 75%;
+    border-radius: 3%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 2px 2px 3px 2px rgba(175, 214, 240, 0.596);
+}
+
+/* ********************* PRESENTATION ********************* */
+
+h3 {
+    padding: 30px 10%;
+}
+
+.imageDuo {
+    display: flex;
+    padding: 30px 10%;
+}
+
+.iconAndText {
+    display: flex;
+}
+
+.iconAndText img {
+    width: 100%;
+    border-radius: 30%;
+    box-shadow: 2px 2px 3px 2px rgba(175, 214, 240, 0.596);
+}
+
+.iconAndText img:hover {
+    transform: scale(1.08);
+    transition: 0.15s ease-in-out;
+}
+
+.iconAndText p {
+    padding: 0 2em;
+}
+
+
+
+
+
