--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Lobster&family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap');
 
-/*font-family: 'Fredoka One', cursive;
+/*
+FONTS:
+font-family: 'Fredoka One', cursive;
 font-family: 'Lobster', cursive;
 font-family: 'Roboto', sans-serif;*/
+
+html {
+    scroll-behavior: smooth;
+}
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -83,23 +89,34 @@ h1 {
     margin-top: 1.2em;
     /*-webkit-text-stroke: 6px white;*/
     text-shadow: 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px #FFF, 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255), 0px 0px 6px rgb(255, 255, 255);
+    /*text-shadow: 10px 10px 0 red, -10px 10px 0 red, 10px -10px 0 red, -10px -10px 0 red;*/
 }
 
 /* ********************* INTRODUCTION ********************* */
 
 #introduction {
-    background-color: #d4ffff8c;
+    /*background-color: #d4ffff8c;*/
+    background-color: rgb(0, 80, 134);
     padding: 10px 0px 80px 0;
 }
 
 #textIntro {
     padding: 0px 20%;
-    color: rgb(7, 128, 209);
+    /*color: rgb(7, 128, 209);*/
+    color: white;
+}
+
+#textIntro h2 {
+margin-bottom: 2.5em;
 }
 
 p {
     padding: 0 0 2em 0;
 }
+
+#textIntro p {
+    margin-bottom: 2.5em;
+    }
 
 #imgDemo {
     width: 75%;
@@ -107,13 +124,20 @@ p {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    box-shadow: 2px 2px 3px 2px rgba(175, 214, 240, 0.596);
+    box-shadow: 2px 2px 3px 2px rgba(222, 234, 241, 0.76);
 }
 
 /* ********************* PRESENTATION ********************* */
 
-h3 {
+#presentation {
+    margin-bottom: 2.5em;
+}
+
+#presentation h2 {
     padding: 30px 10%;
+    text-align: center;
+    margin: 2em 0;
+    color: rgb(0, 80, 134);
 }
 
 .imageDuo {
@@ -138,6 +162,89 @@ h3 {
 
 .iconAndText p {
     padding: 0 2em;
+}
+
+/* ********************* FOOTER ********************* */
+
+footer {
+    background-color: rgb(0, 80, 134);
+    color: white;
+    padding: 20px 0 10px 0;
+    text-align: center;
+}
+
+footer h2 {
+    margin-bottom: 1.5em;
+}
+
+form {
+    margin: 0 auto;
+    max-width: 900px;
+}
+
+input, textarea, button {
+    border: none;
+    width: 55%;
+    padding: 15px 10px;
+    margin: 1px 0;
+    font-size: 1.2em;
+    font-family: 'Roboto', sans-serif;
+    border-radius: 10px;
+}
+
+textarea {
+    height: 120px;
+}
+
+button {
+    font-size: 1.5em;
+    background-color: white;
+    color: rgb(0, 80, 134);
+    margin-bottom: 1.5em;
+}
+
+button:hover {
+    background-color: #d4ffff8c;
+    color: white;
+    cursor: pointer;
+    transition: 0.1s ease-in-out;
+}
+
+#trait {
+    height: 2px;
+    width: 75%;
+    margin: 2em auto;
+    background-color: #d4ffff8c;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.267);
+}
+
+#copyrightAndIcons {
+    display: flex;
+    margin-bottom: 20px;
+    padding: 0 10%;
+}
+
+#copyright {
+    width: 50%;
+    text-align: left;
+    color: white;
+}
+
+#socialMediaIcons {
+    width: 50%;
+    text-align: right;
+}
+
+#socialMediaIcons a {
+    display: inline-block;
+    padding: 0 15px;
+    font-size: 1.3em;
+    color: white;
+}
+
+#socialMediaIcons a:hover {
+    transform: scale(1.5);
+    transition: 0.15s ease-in-out;
 }
 
 
